--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="holder">
-        <div class="item item-1">
+        <div class="item ">
             Place me in center using flex
         </div>
     </div>
