--- a/main.html
+++ b/main.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+ 
+<html>
+ 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Place Item in Center</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+ 
 <body>
-    <div class="holder">
-        <div class="item ">
-            Place me in center using flex
-        </div>
-    </div>
+	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div class="item">item</div>
+	</div>
+    <script type="text/javascript" src="./script.js">
+</script>
+ 
 </body>
+ 
 </html>
